--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: torch_render
+name: humanml3d
 channels:
   - defaults
 dependencies:
@@ -181,4 +181,3 @@ dependencies:
     - trimesh==3.12.5
     - urllib3==1.26.9
     - werkzeug==2.1.2
-prefix: /home/chuan/anaconda3/envs/torch_render
