--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+git+https://github.com/nghorbani/body_visualizer
+git+https://github.com/MPI-IS/configer.git
+git+https://github.com/MPI-IS/mesh.git
+
 absl-py==1.0.0
 # body-visualizer==1.1.0
 cachetools==4.2.4
@@ -46,10 +50,6 @@ transforms3d==0.3.1
 trimesh==3.12.5
 urllib3==1.26.9
 werkzeug==2.1.2
-
-# pip install git+https://github.com/nghorbani/body_visualizer.git
-# pip install git+https://github.com/MPI-IS/configer
-# pip install git+https://github.com/MPI-IS/mesh.git
 
 pip-install==1.3.5
 # sudo apt-get install libboost-dev
