--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.pyc
 
 .idea/
+__pycache__/
 
 download/
 motion_data/
@@ -11,3 +12,4 @@ joints/
 HumanML3D/new_joints/
 HumanML3D/new_joint_vecs/
 HumanML3D/texts/
+HumanML3D/animations/
